# ficmart

./: .dockerignore  .gitignore  Dockerfile  README.md  auth.py  cart.py  catalog.py  config.py  database.py  docker-compose.yaml  ficmart-deployment.yaml  ficmart-service.yaml  ficmart.db  main.py  models.py  pyproject.toml  schemas.py  utils.py
.github/workflows/: github-actions.yaml
app/: config.py  database.py  main.py  webhook.py
app/models/: models.py
app/routes/: auth.py  cart.py  catalog.py  checkout.py  health.py
app/schemas/: cart.py  vendor.py
app/services/: cart.py  order.py  password_reset.py
app/utils/: auth.py  reference.py  tokens.py
app/workers/: mail_workers.py
src/app/: alembic.ini  config.py  database.py  main.py  webhook.py
src/app/alembic/: env.py
src/app/models/: models.py
src/app/routes/: auth.py  cart.py  catalog.py  checkout.py  health.py
src/app/schemas/: order.py  password_reset.py  product.py  token.py  user.py
src/app/services/: order.py
src/app/workers/: celery.py  mail_workers.py  templates.py
